| Bug #52225 | Alterting table with special characters in database or tablename crashes server | ||
|---|---|---|---|
| Submitted: | 19 Mar 2010 16:21 | Modified: | 5 May 2010 7:23 |
| Reporter: | pedro oriani | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | mysql-5.1-telco-7.0 | OS: | Linux |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
| Tags: | 5.1.41-ndb-7.0.13-cluster-gpl | ||
[19 Mar 2010 16:21]
pedro oriani
[22 Mar 2010 20:16]
Sveta Smirnova
Thank you for the report. Verified as described.
[3 May 2010 12:20]
Jonas Oreland
Hi Sveta, I've now tried repeating this for 10 minutes, wo/ succeeding ? Both on 63-bzr, 70-bzr and 7.0.13 But, - I used myisam instead of innodb, could you check if this makes a difference? - Also I only tried debug compiled, what did you try ? /Jonas
[4 May 2010 6:04]
Sveta Smirnova
Jonas, just tested with MyISAM and latest 7.1 from bzr. Still repeatable for me. I use following test case for MTR: $cat bug52225.test --source include/have_ndb.inc #--source include/have_innodb.inc create database `www.test`; CREATE TABLE `www.test`.`test` ( `id` INTEGER UNSIGNED NOT NULL AUTO_INCREMENT, `test` VARCHAR(45) NOT NULL, PRIMARY KEY (`id`) ) ENGINE = InnoDB; ALTER TABLE `www.test`.`test` ENGINE = ndbcluster; ALTER TABLE `www.test`.`test` CHARACTER SET utf8 COLLATE utf8_general_ci;
[4 May 2010 7:24]
Jonas Oreland
now i got it...
[4 May 2010 7:32]
Jonas Oreland
the problem is not charset related, but the fact the database-name contains '.' it seems, renaming database from `www.test` to `wwwtest` make testcase pass.
[4 May 2010 7:34]
Jonas Oreland
also, when using the database name `www.test`, add column, rename column, drop column all crash the same way.
[4 May 2010 10:18]
Wojciech Bajorek
I just hit the same bug on 7.0.13 however in my case database name is not with "." but with "-". When I removed this character from db name I'm able to do the changes on db without unexpected node restart.
[4 May 2010 13:03]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/107315 3190 Jonas Oreland 2010-05-04 bug#53409 (part of bug#52225) - fix arguments to mysql_frm_type, pass filename instead of tablename, this as cluster uses table_type for further processing
[4 May 2010 13:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/107319 3191 Jonas Oreland 2010-05-04 ndb - bug#52225 in addition to fixing bug#53409, also handle tab/db-name vs. filename consistently wrt to replication (events) (for now settle on using tab/db-name instead of filename...which might actually be incorrect, but now it's atleast consistent)
[4 May 2010 13:27]
Bugs System
Pushed into 5.1.44-ndb-7.0.15 (revid:jonas@mysql.com-20100504131650-so3jj5b5vqa8dfss) (version source revid:jonas@mysql.com-20100504131650-so3jj5b5vqa8dfss) (merge vers: 5.1.44-ndb-7.0.15) (pib:16)
[4 May 2010 13:28]
Bugs System
Pushed into 5.1.44-ndb-6.3.34 (revid:jonas@mysql.com-20100504130906-vsp23m8380itegak) (version source revid:jonas@mysql.com-20100504130906-vsp23m8380itegak) (merge vers: 5.1.44-ndb-6.3.34) (pib:16)
[4 May 2010 14:02]
Jonas Oreland
pushed to 6.3.34, 7.0.15 and 7.1.4
[5 May 2010 7:19]
Jon Stephens
Documented in the NDB-6.3.34, 7.0.15, and 7.1.4 changelogs, as follows:
ALTER TABLE did not work correctly where the name of the table,
the database, or both contained special characters, causing the
MySQL server to crash.
See also BUG#53409, BUG#14959.
Closed.
[6 Jan 2011 8:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/128052 3229 Tatiana Azundris Nurnberg 2011-01-06 Bug#53409: Alter table can't rename a view with special characters Bug#14959 Bug#52225 Add missing test case for regular (non-NDB) server. We now try to handle database names with periods etc. correctly in ALTER. @ mysql-test/r/rename.result test @ mysql-test/t/rename.test test
